--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" type="text/css" href="./style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
     <title>index</title>
 </head>
 <body>
-<table>
+<div class="container" style="resize: both">
+<table class="table table-hover">
     <thead>
     <tr>
         <th>name</th>
@@ -22,8 +25,12 @@
         <td th:text="${wishes.getUrl()}"></td>
         <td th:text="${wishes.getPictureUrl()}"></td>
         <td th:text="${wishes.getDescription()}"></td>
+        <td>
+            <a class="btn btn-danger" th:href="@{'/deletewish/' + ${wishes.getId()}}" role="button">Delete</a>
+        </td>
     </tr>
     </tbody>
 </table>
+</div>
 </body>
 </html>
