--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div class="container" style="resize: both">
+    <div>
+        <a class="btn btn-success" th:href="@{'/addwish/'}" role="button">Add wish</a>
+    </div>
 <table class="table table-hover">
     <thead>
     <tr>
