deleteWish added and html pages added

--- a/src/main/resources/templates/addwish.html
+++ b/src/main/resources/templates/addwish.html
@@ -8,6 +8,19 @@
 </head>
 
 <body>
+<div class="container">
+    <h1>Add wish</h1>
+    <form action="addwish" method="post">
+        <div class="form-group w-25">
+            <div class="form-control">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="number" class="form-control" id="name" name="name">
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
 </body>
 </html>
