--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 <div class="container" style="resize: both">
-    <div>
-        <a class="btn btn-success" th:href="@{'/addwish/'}" role="button">Add wish</a>
+    <div class="text-center">
+    <h1>WishingWell</h1>
     </div>
-<table class="table table-hover">
+    <div>
+        <a class="btn btn-success" class="text-center" th:href="@{'/addwish/'}" role="button">Add wish</a>
+    </div>
+    <table class="table table-hover">
     <thead>
     <tr>
         <th>name</th>
