--- a/src/main/resources/templates/addwish.html
+++ b/src/main/resources/templates/addwish.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <h1>Add wish</h1>
-    <form action="addwish" method="post">
+    <form action="/addwish" method="post">
         <div class="form-group w-25">
             <div class="form-control">
                 <div class="mb-3">
