--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" th:href="@{style.css}" href="../static/style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
@@ -12,23 +12,22 @@
     <p>id: <span th:text="${wish.getId()}"></span></p>
 
     <label for="name">name: </label>
-    <input id="name" name="name" type="text" th:value="${wish.getName()}">
+    <input id="name" name="name" type="text" th:value="${wish.name}">
 
-    <label for="speed">price: </label>
-    <input id="speed" name="speed" type="number" th:value="${wish.getPrice()}">
+    <label for="price">price: </label>
+    <input id="price" name="speed" type="number" th:value="${wish.getPrice()}">
 
-    <label for="special_defence"> url: </label>
-    <input id="special_defence" name="special_defence" type="number" th:value="${wish.getUrl()}">
+    <label for="url"> url: </label>
+    <input id="url" name="url" type="text" th:value="${wish.getUrl()}">
 
-    <label for="special_attack">picture url: </label>
-    <input id="special_attack" name="special_attack" type="number" th:value="${wish.getPictureUrl()}">
+    <label for="pictureurl">picture url: </label>
+    <input id="pictureurl" name="pictureurl" type="text" th:value="${wish.getPictureUrl()}">
 
-    <label for="defence">description: </label>
-    <input id="defence" name="defence" type="number" th:value="${wish.getDescription()}">
+    <label for="description">description: </label>
+    <input id="description" name="description" type="text" th:value="${wish.getDescription()}">
 
     <button style="margin-top: 5px" type="submit">Submit</button>
 
 </form>
-
 </body>
 </html>
