--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <h1>WishingWell</h1>
     </div>
     <div>
-        <a class="btn btn-success" class="text-center" th:href="@{'/addwish/'}" role="button">Add wish</a>
+        <a class="btn btn-success text-center" th:href="@{'/addwish/'}" role="button">Add wish</a>
     </div>
     <table class="table table-hover">
     <thead>
