--- a/src/main/resources/templates/addwish.html
+++ b/src/main/resources/templates/addwish.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Add Wish</title>
 </head>
 
 <body>
 <div class="container">
-    <h1>Add wish</h1>
+    <h1>Add Wish</h1>
     <form action="/addwish" method="post">
         <div class="form-group w-25">
             <div class="form-control">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="name">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Name of wish">
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
@@ -23,21 +24,23 @@
                 </div>
                 <div class="mb-3">
                     <label for="url" class="form-label">Link (url)</label>
-                    <input type="text" class="form-control" id="url" name="url" placeholder="eg. www.wish.com">
+                    <input type="text" class="form-control" id="url" name="url" placeholder="eg.www.wish.com">
                 </div>
                 <div class="mb-3">
                     <label for="pictureurl" class="form-label">Picture link (url)</label>
-                    <input type="text" class="form-control" id="pictureurl" name="pictureurl" placeholder="eg. www.wish.com/picture.img">
+                    <input type="text" class="form-control" id="pictureurl" name="pictureurl"
+                           placeholder="eg.www.wish.com/picture.img">
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <input type="text" class="form-control" id="description" name="description" placeholder="eg. I'd like it in blue">
+                    <input type="text" class="form-control" id="description" name="description"
+                           placeholder="eg. I'd like it in blue">
                 </div>
                 <button type="submit" class="btn btn-success">Add wish</button>
+                <button type="button" onclick="java:history.back()" class="btn btn-success">Back</button>
             </div>
         </div>
     </form>
 </div>
-
 </body>
 </html>
