--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" type="text/css" href="./style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="../static/style/css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>index</title>
 </head>
 <body>
-<div class="container" style="resize: both">
+<div class="container">
     <div class="text-center">
-    <h1>WishingWell</h1>
+        <h1>WishingWell</h1>
     </div>
     <div>
         <a class="btn btn-success text-center" th:href="@{'/addwish/'}" role="button">Add wish</a>
     </div>
     <table class="table table-hover">
-    <thead>
-    <tr>
-        <th>name</th>
-        <th>price</th>
-        <th>url</th>
-        <th>pictureurl</th>
-        <th>description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="wishes : ${wishlist}">
-        <td th:text="${wishes.getName()}"></td>
-        <td th:text="${wishes.getPrice()}"></td>
-        <td th:text="${wishes.getUrl()}"></td>
-        <td th:text="${wishes.getPictureUrl()}"></td>
-        <td th:text="${wishes.getDescription()}"></td>
-        <td>
-            <a class="btn btn-danger" th:href="@{'/deletewish/' + ${wishes.getId()}}" role="button">Delete</a>
-            <span> | </span>
-            <a class="btn btn-primary btn-sm" th:href="@{'/update/' + ${wishes.getId()}}" role="button">Update</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+        <thead>
+        <tr>
+            <th>name</th>
+            <th>price</th>
+            <th>url</th>
+            <th>pictureurl</th>
+            <th>description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="wishes : ${wishlist}">
+            <td th:text="${wishes.getName()}"></td>
+            <td th:text="${wishes.getPrice()}"></td>
+            <td th:text="${wishes.getUrl()}"></td>
+            <td th:text="${wishes.getPictureUrl()}"></td>
+            <td th:text="${wishes.getDescription()}"></td>
+            <td>
+                <a class="btn btn-danger" th:href="@{'/deletewish/' + ${wishes.getId()}}" role="button" onclick="return confirm('Are you sure?')">Delete</a>
+                <span> | </span>
+                <a class="btn btn-primary btn-sm" th:href="@{'/update/' + ${wishes.getId()}}" role="button">Update</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
