--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" type="text/css" href="../static/style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
     <title>Update</title>
 </head>
 <body>
 <div class="container">
-<h1>Update pokemon</h1>
-<style>
-    form
-    {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-</style>
-<div class="form-group w-25">
-<form method="post">
-
-    <label for="name">name: </label>
-    <input id="name" name="name" type="text" th:value="${wish.getName()}">
-
-    <label for="price">price: </label>
-    <input id="price" name="price" type="text" th:value="${wish.getPrice()}">
-
-    <label for="url">url: </label>
-    <input id="url" name="url" type="text" th:value="${wish.getUrl()}">
-
-    <label for="pictureurl">picture url: </label>
-    <input id="pictureurl" name="pictureurl" type="text" th:value="${wish.getPictureUrl()}">
-
-    <label for="description">description: </label>
-    <input id="description" name="description" type="text" th:value="${wish.getDescription()}">
-
-    <button style="margin-top: 5px" type="submit">Submit</button>
-
-</form>
-</div>
+    <h1>Update Wish</h1>
+    <form method="post">
+        <div class="form-group w-25">
+            <div class="form-control">
+                <div class="mb-3">
+                    <label for="name">Name</label>
+                    <input class="form-control" id="name" name="name" type="text" th:value="${wish.getName()}">
+                </div>
+                <div class="mb-3">
+                    <label for="price">Price</label>
+                    <input class="form-control" id="price" name="price" type="text" th:value="${wish.getPrice()}">
+                </div>
+                <div class="mb-3">
+                    <label for="url">Url</label>
+                    <input class="form-control" id="url" name="url" type="text" th:value="${wish.getUrl()}">
+                </div>
+                <div class="mb-3">
+                    <label for="pictureurl">Link Picture</label>
+                    <input class="form-control" id="pictureurl" name="pictureurl" type="text" th:value="${wish.getPictureUrl()}">
+                </div>
+                <div class="mb-3">
+                    <label for="description">Description</label>
+                    <input class="form-control" id="description" name="description" type="text" th:value="${wish.getDescription()}">
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+                <button type="button" onclick="java:history.back()" class="btn btn-success">Back</button>
+                <div/>
+            </div>
+        </div>
+    </form>
 </div>
 </body>
 </html>
