--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -14,7 +14,7 @@
         <h1>WishingWell</h1>
     </div>
     <div>
-        <a class="btn btn-success text-center" th:href="@{'/addwish'}"  role="button">Add Wish</a>
+        <a class="btn btn-success text-center" th:href="@{'/addwish/' + ${id}}"  role="button">Add Wish</a>
     </div>
     <table class="table table-hover">
         <thead>
