--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -38,7 +38,7 @@
 
             <td th:text="${wishes.getDescription()}"></td>
             <td>
-                    <img class="img-fluid img-thumbnail" width="25%" th:src="@{${wishes.getPictureUrl()}}" alt="No pic with this URL">
+                    <img class="img-fluid img-thumbnail w-25" th:src="@{${wishes.getPictureUrl()}}" alt="No pic with this URL">
             </td>
             <td>
                 <a class="btn btn-danger" th:href="@{'/deletewish/' + ${wishes.getId()}}" role="button" onclick="return confirm ('Are you sure you want to delete this wish?')">Delete</a>
